--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -75,7 +75,7 @@
 
   <div class="row">
     <div class="col">
-      <h4>Accidentally making a resistive sensor instead of a capacitive sensor</h4>
+      <h4>Velostat pressure sensor</h4>
     </div>
   </div>
 
