--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./13_finalproject/final-project-placeholder-image.jpg" alt = "final project placeholder"> </image> 
-      <br>[Final Project](./13_finalproject/index.html)
+      <br>[Final Project](./13_finalproject/final.html)
     </div>
   </div>
 </div>
